// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-1sgyp7i-0 ityfBC css-vurnku"
  >
    <div
      class="sc-bdnxRM Row-sc-19fk4x0-0 RoutingDiagram__RouteContainerRow-sc-1sgyp7i-1 lmTMKd hTryuz ffflRm"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-19fk4x0-0 RoutingDiagram__RouteRow-sc-1sgyp7i-2 lmTMKd hTryuz epDqNq"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-1sgyp7i-4 coPmVJ"
        >
          <svg
            class="RoutingDiagram__DotColor-sc-1sgyp7i-5 fjrkym"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="Badge-sc-g51hsj-0 RoutingDiagram__OpaqueBadge-sc-1sgyp7i-6 bRVwmk eZDNFW"
        >
          <div
            class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            style="word-break: normal;"
          >
            75%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-19fk4x0-0 Row__AutoRow-sc-19fk4x0-3 iqvZFe hTryuz fRdFyI"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="Badge-sc-g51hsj-0 RoutingDiagram__PoolBadge-sc-1sgyp7i-3 bRVwmk ZSmgP"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=USDC
            </div>
            <div
              class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            >
              0.01%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
    <div
      class="sc-bdnxRM Row-sc-19fk4x0-0 RoutingDiagram__RouteContainerRow-sc-1sgyp7i-1 lmTMKd hTryuz ffflRm"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-19fk4x0-0 RoutingDiagram__RouteRow-sc-1sgyp7i-2 lmTMKd hTryuz epDqNq"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-1sgyp7i-4 coPmVJ"
        >
          <svg
            class="RoutingDiagram__DotColor-sc-1sgyp7i-5 fjrkym"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="Badge-sc-g51hsj-0 RoutingDiagram__OpaqueBadge-sc-1sgyp7i-6 bRVwmk eZDNFW"
        >
          <div
            class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            style="word-break: normal;"
          >
            25%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-19fk4x0-0 Row__AutoRow-sc-19fk4x0-3 iqvZFe hTryuz fRdFyI"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="Badge-sc-g51hsj-0 RoutingDiagram__PoolBadge-sc-1sgyp7i-3 bRVwmk ZSmgP"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=WBTC currency1=USDC
            </div>
            <div
              class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            >
              0.3%
            </div>
          </div>
          <div
            class="Badge-sc-g51hsj-0 RoutingDiagram__PoolBadge-sc-1sgyp7i-3 bRVwmk ZSmgP"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=WBTC
            </div>
            <div
              class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            >
              1%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-1sgyp7i-0 ityfBC css-vurnku"
  >
    <div
      class="sc-bdnxRM Row-sc-19fk4x0-0 RoutingDiagram__RouteContainerRow-sc-1sgyp7i-1 lmTMKd hTryuz ffflRm"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-19fk4x0-0 RoutingDiagram__RouteRow-sc-1sgyp7i-2 lmTMKd hTryuz epDqNq"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-1sgyp7i-4 coPmVJ"
        >
          <svg
            class="RoutingDiagram__DotColor-sc-1sgyp7i-5 fjrkym"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="Badge-sc-g51hsj-0 RoutingDiagram__OpaqueBadge-sc-1sgyp7i-6 bRVwmk eZDNFW"
        >
          <div
            class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            style="word-break: normal;"
          >
            100%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-19fk4x0-0 Row__AutoRow-sc-19fk4x0-3 iqvZFe hTryuz fRdFyI"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="Badge-sc-g51hsj-0 RoutingDiagram__PoolBadge-sc-1sgyp7i-3 bRVwmk ZSmgP"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=USDC
            </div>
            <div
              class="theme__TextWrapper-sc-xx7zfj-0 jQATR css-15li2d9"
            >
              0.05%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-1sgyp7i-0 ityfBC css-vurnku"
  />
</DocumentFragment>
`;
